fix: github icon alignment with text (#115)
* fix: github icon alignment with text

* make component library index collapsible

* housekeeping

* Separate index js into own file

* add text to library landing page

* fix index toggle bug

* github icon centering

* fix spacing

* fix spacing between words

--- a/src/assets/css/components/hero.css
+++ b/src/assets/css/components/hero.css
@@ -1,16 +1,16 @@
-@media all and (min-width: 800px) {
-  .hero .grid {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-gap: 2rem;
-    align-items: center; } }
-
-.hero .grid .span-1-7 {
-  grid-column: 1 / 2; }
-
-.hero .grid .span-10-12 {
-  grid-column: 2 / 3;
-  justify-self: end; }
+.hero .grid {
+  width: 100%; }
+  @media all and (min-width: 800px) {
+    .hero .grid {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      grid-gap: 2rem;
+      align-items: center; } }
+  .hero .grid .span-1-7 {
+    grid-column: 1 / 2; }
+  .hero .grid .span-10-12 {
+    grid-column: 2 / 3;
+    justify-self: end; }
 
 .hero {
   border-bottom: 1px solid var(--divider-color);
