--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1591,7 +1591,9 @@ nav.c-pagination {
     padding-right: 1rem;
     margin-inline-start: 0;
     margin-block-end: 1rem;
-    padding-inline-end: 1rem; }
+    padding-inline-end: 1rem;
+    display: flex;
+    align-items: center; }
   .eslint-versions .c-icon {
     margin-right: .5rem;
     margin-inline-end: .5rem; }
@@ -2341,19 +2343,19 @@ button.c-share__btn {
   color: var(--headings-color);
   font-weight: 500; }
 
-@media all and (min-width: 800px) {
-  .hero .grid {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-gap: 2rem;
-    align-items: center; } }
-
-.hero .grid .span-1-7 {
-  grid-column: 1 / 2; }
-
-.hero .grid .span-10-12 {
-  grid-column: 2 / 3;
-  justify-self: end; }
+.hero .grid {
+  width: 100%; }
+  @media all and (min-width: 800px) {
+    .hero .grid {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+      grid-gap: 2rem;
+      align-items: center; } }
+  .hero .grid .span-1-7 {
+    grid-column: 1 / 2; }
+  .hero .grid .span-10-12 {
+    grid-column: 2 / 3;
+    justify-self: end; }
 
 .hero {
   border-bottom: 1px solid var(--divider-color);
@@ -2462,6 +2464,10 @@ button.c-share__btn {
 .language-switcher {
   display: inline-flex; }
 
+.index {
+  margin-bottom: 4rem;
+  margin-block-end: 4rem; }
+
 .index__item {
   margin: 0; }
   .index__item a {
@@ -2477,6 +2483,61 @@ button.c-share__btn {
     color: var(--link-color);
     background-color: var(--lightest-background-color);
     font-weight: 500; }
+
+.index__toggle {
+  cursor: pointer;
+  display: flex;
+  width: 100%;
+  padding: .75rem 1.125rem;
+  align-items: center;
+  justify-content: space-between;
+  gap: .5rem;
+  font-weight: 500;
+  border: 1px solid var(--border-color);
+  border-radius: var(--border-radius);
+  background-color: var(--secondary-button-background-color);
+  color: var(--secondary-button-text-color);
+  box-shadow: 0 1px 2px rgba(16, 24, 40, 0.1); }
+  .index__toggle:hover {
+    background-color: var(--secondary-button-hover-color); }
+  @media all and (min-width: 1023px) {
+    .index__toggle {
+      display: none; } }
+  .index__toggle svg {
+    width: 1.5em;
+    height: 1.5em;
+    color: inherit;
+    fill: none;
+    stroke-width: 4;
+    stroke-linecap: round;
+    stroke-linejoin: round; }
+  .index__toggle #ham-top,
+  .index__toggle #ham-middle,
+  .index__toggle #ham-bottom {
+    transition: all .2s linear; }
+  .index__toggle #ham-top {
+    transform-origin: 30px 37px; }
+  .index__toggle #ham-bottom {
+    transform-origin: 30px 63px; }
+  .index__toggle[aria-expanded="true"] #ham-middle {
+    opacity: 0; }
+  .index__toggle[aria-expanded="true"] #ham-top {
+    transform: rotate(41deg); }
+  .index__toggle[aria-expanded="true"] #ham-bottom {
+    transform: rotate(-41deg); }
+
+.index__list {
+  display: block; }
+  .index__list[data-open="false"] {
+    display: none; }
+    @media all and (min-width: 1023px) {
+      .index__list[data-open="false"] {
+        display: block; } }
+  .index__list[data-open="true"] {
+    display: block; }
+    @media all and (min-width: 1023px) {
+      .index__list[data-open="true"] {
+        display: block; } }
 
 @media all and (max-width: 800px) {
   .hero-ad {
