--- a/src/assets/scss/components/homepage.scss
+++ b/src/assets/scss/components/homepage.scss
@@ -126,6 +126,9 @@
         margin-inline-start: 0;
         margin-block-end: 1rem;
         padding-inline-end: 1rem;
+
+        display: flex;
+        align-items: center;
     }
 
     .c-icon {
